src/main/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metada:
  name: image-converter-service # ${PROJECT_NAME}
  labels:
    app: image-converter-service
    tier: backend
    environment: dev
  namespace: general # ${PROJECT_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-converter-service # ${PROJECT_NAME}
  strategy:
      rollingUpdate:
         maxSurge: 50%   
  template:
    metadata:
      labels:
        app: image-converter-service # ${PROJECT_NAME}
        tier: backend    
        cmdbname: gke # ${CLOUD}
        commit: commit_branch # ${COMMIT_BRANCH}
        project: image-converter-service # ${PROJECT_NAME}
        squad: tech-infra # ${SQUAD}
        type: support # ${TYPE}
    spec:
      containers:
      - name: image-convert-service
        image: IMAGE # ${DOCKER_IMAGE}:${APP_VERSION}
      ports:
      - containerPort: 5000
      readinessProbe:
        httpGet:
          path: /actuator/health/liveness
          port: 5090
        initialDelaySeconts: 200
        periodSeconds: 30
        timeoutSeconds: 10
      livenessProbe:
        httpGet:
          path: /actuator/health/readiness
          port: 5090
        failureThreshold: 3
        initialDelaySeconts: 200
        periodSeconds: 30
        timeoutSeconds: 10
      resources:
        requests: 
          memory: 1Gi
          cpu: 200m
        limits:
          memory: 2Gi
          cpu: 500m          
      volumes:
      - name: my-secret-volume   
        secret:
          secretName: image-converter-service-account-volume # ${PROJECT_NAME}-account-volume
