src/main/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metada:
  name: image-converter-service # ${PROJECT_NAME}
  namespace: general # ${PROJECT_NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-converter-service # ${PROJECT_NAME}
  strategy:
      rollingUpdate:
         maxSurge: 50%   
  template:
    metadata:
      labels:
        app: image-converter-service # ${PROJECT_NAME}
        cmdbname: gke # ${CLOUD}
        commit: commit_branch # ${COMMIT_BRANCH}
        project: image-converter-service # ${PROJECT_NAME}
        squad: tech-infra # ${SQUAD}
        type: support # ${TYPE}
    spec:
      containers:
      - name: image-convert-service
        image: IMAGE # ${DOCKER_IMAGE}:${APP_VERSION}
      ports:
      - containerPort: 8080
      readinessProbe:
        httpGet:
          path: /actuator/health/liveness
          port: 5090
        initialDelaySeconts: 30
        periodSeconds: 30
        timeoutSeconds: 10
      livenessProbe:
        httpGet:
          path: /actuator/health/readiness
          port: 5090
        initialDelaySeconts: 30
        periodSeconds: 30
        timeoutSeconds: 10
      resources:
        requests: 
          memory: "1Gi"
          cpu: "200m"
        limits:
          memory: "2Gi"
          cpu: "500m"          
      volumes:
      - name: my-secret-volume   
        secret:
          secretName: image-converter-service-account-volume # ${PROJECT_NAME}-account-volume
